Update Unit1 and Unit2

--- a/第一章-绪论.md
+++ b/第一章-绪论.md
@@ -1,4 +1,6 @@
 # 第一章·绪论
+> 乔毅
+> 学号：2019210472
 > 1.数据库系统的基本概念  
 > 2.数据管理技术的发展过程  
 > 3.数据库系统的组成部分  
@@ -266,3 +268,4 @@
 ## 1.5 Log
 - 2021.3.18 第一次编写完成并上传[Github](https://github.com/CharlieQYQ/BUPT-DataBase-MarkDown)
 - 2021.3.19 重命名为“第一章-绪论”，Github添加超链接
+- 2021.3.24 添加姓名和学号
