--- a/第二章-关系数据库.md
+++ b/第二章-关系数据库.md
@@ -1,4 +1,6 @@
 # 第二章·关系数据库
+> 乔毅
+> 学号：2019210472
 > 1970年，E.F.Codd在美国计算机学会会刊《Communications of the ACM》上发表了题为“A Relational Model of Data for Shared Data Banks”的论文，开创了数据库系统的新纪元。ACM 1983年把这篇论文列为从1958年以来的四分之一世纪中具有里程碑意义的25篇研究论文之一。此后E.F.Codd连续发表了多篇论文，奠定了关系数据库的理论基础
 > 2.1 关系数据结构及形式化定义
 > 2.2 关系操作
@@ -171,3 +173,4 @@
 
 ## 2.5 Log
 - 2021.3.21 第一次编写完成并上传[Github](https://github.com/CharlieQYQ/BUPT-DataBase-MarkDown)
+- 2021.3.24 添加姓名和学号
